# scr

./: .editorconfig  .geminiignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .shellcheckrc  4ndr0-setup.sh  4ndr0666.sh  4ndr0666_v1.sh  4ndr0666v2.sh  4ndr0base-beta.sh  4ndr0base.sh  4ndr0base_install.sh  4ndr0install  4ndr0pac  4ndr0update  4ndr0update.sh  AGENTS.md  CODEX.md  README.md  acl.sh  apply-gsettings  apply_driverinfo.sh  archcraft_permissions_reference.txt  audiofix.sh  autochroot_btrfs.sh  backup-configs.sh  backupbrave.sh  backupconfigs.sh  backupiso.sh  balance  bash-resume.sh  basicupdatescript  better-ls.sh  blackarchme.sh  brave-restore.sh  bulk_delete.sh  caps.sh  chatgpt.sh  clean-aur-dir.py  (+79 more)
.gemini/: settings.json  system.md
0-tests/: CHANGELOG.md  codex-merge-clean.sh  makex  task_outcome.md  test-codex-merge-clean.bats  test-genre-plugin-loader.bats
01-firstrun/: firstrun.sh
02-recovery/: backupconfigs.sh
0_firstrun_tools/: 4ndr0666_setup.sh  aliasrc  system_health_check.sh
0_recovery_tools/: aliasrc  subv_mount.sh
1_firstrun_tools/: backup_verification.sh  makegrub  makerecovery-etc  system_cleanup.sh
1_recovery_tools/: perms.sh
1_static_tools/: 4ndr0666.sh  4ndr0666.sh_utils.tgz  progs.csv
4ndr0install/: 4ndr0666install.sh  hideapps.sh  homemanager.sh  makegrub-btrfs.sh  makegrub.sh  progs.csv  system_cleanup.sh  system_health_check.sh  zprofile  zshrc
4ndr0optimize/: controller.sh
4ndr0suite/: zshrc
4ndr0tools/: .gitignore  (+13 more)
media/wm_suite/rust_version/: Cargo.toml
media/wm_suite/rust_version/src/: main.rs
(+1997 files in other folders)
